--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watch": "nodemon"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "connect-livereload": "^0.6.1",
     "livereload": "^0.9.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "prisma": "^3.14.0"
   }
 }
