--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.1.0",
     "connect-livereload": "^0.6.1",
+    "dotenv": "^16.0.1",
+    "faker": "^6.6.6",
     "livereload": "^0.9.3",
     "nodemon": "^2.0.16",
     "prisma": "^3.14.0"
