--- a/package.json
+++ b/package.json
@@ -8,18 +8,17 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.1.0",
     "connect-livereload": "^0.6.1",
-    "dotenv": "^16.0.1",
-    "faker": "^6.6.6",
     "livereload": "^0.9.3",
     "nodemon": "^2.0.16",
     "prisma": "^3.14.0"
